tests/NormalTests/paczka1/fuzzy1/31937814.err
Error in line 3: 39c S344 988,0
Error in line 10: 39c S67 46,6
Error in line 15: nwhj S344 96,6
Error in line 17: eooqL5 S67 52,8
Error in line 28: aYc96 S67 -5,2
Error in line 21: eooqL5 S681 37,9
Error in line 31: nwhj S344 36,4
Error in line 33: nwhj S681 61,2
